--- a/Benchmarks/threaded_loops/src/Makefile
+++ b/Benchmarks/threaded_loops/src/Makefile
@@ -9,7 +9,7 @@ OBJS := $(SRCS:./%.c=$(BUILDDIR)/%.o)
 CC:=gcc
 
 CFLAGS := -g -DDEBUG -Wall 
-LDFLAGS := -lpcap
+LDFLAGS := -lpthread
 
 .PHONY: all clean
 
